Base de datos guarda información (aún no se muestra en activity) NUEVA VERSIÓN APP: 1.1.1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,10 @@
     <string name="hint_reminder">Producto próximo a vencer</string>
     <string name="alarm1">Agregar</string>
     <string name="alarm2">Cancelar</string>
+
+    <string name="nom_Prod">Nombre Producto:</string>
+    <string name="cant_Prod">Cantidad:</string>
+    <string name="prec_Prod">Precio:</string>
+
+
 </resources>
